--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   firebase_database: ^11.1.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
