Updated settings + Added dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^1.1.2
   firebase_messaging: ^15.1.6
   flutter_local_notifications: ^18.0.1
+  googleapis_auth: ^1.6.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
